test_suite/tests/ui/with-variant/skip_ser_tuple_field.stderr
error: variant `Tuple` cannot have both #[serde(serialize_with)] and a field #0 marked with #[serde(skip_serializing)]
 --> $DIR/skip_ser_tuple_field.rs:6:5
  |
6 | /     #[serde(serialize_with = "serialize_some_other_variant")]
7 | |     Tuple(#[serde(skip_serializing)] String, u8),
  | |________________________________________________^

error: aborting due to previous error

